# strategy

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
strategy/: __init__.py  board.py  colour.py  console.py  exceptions.py  game.py  main.py  pieces.py  player.py  stratego.py
tests/: __init__.py  test_board.py  test_colour.py  test_console.py  test_game.py  test_main.py  test_piece.py  test_strategy.py
